--- a/examples/kptView.html
+++ b/examples/kptView.html
@@ -37,8 +37,8 @@
 
     </style>
 
-	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
-	<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+	<link rel="stylesheet" href="https://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+	<script src="https://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 
 	<script src="../src/kptUtils.js"></script>
 	<script src="../external/Dictionary.js"></script>
