--- a/examples/kptView.html
+++ b/examples/kptView.html
@@ -26,6 +26,33 @@
 		.hidden {
 			display: none;
 		}
+        .button {
+            display: inline-block;
+            outline: none;
+            cursor: pointer;
+            border: solid 1px #da7c0c;
+            margin-top: 10px;
+            text-align: center;
+            text-decoration: none;
+            font: 14px/100% Arial, Helvetica, sans-serif;
+            padding: .5em 2em .55em;
+            -webkit-border-radius: .5em; 
+            -moz-border-radius: .5em;
+            border-radius: .3em;
+            -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.2);
+            -moz-box-shadow: 0 1px 2px rgba(0,0,0,.2);
+            box-shadow: 0 1px 2px rgba(0,0,0,.2);
+        }
+        .button:hover {
+            background: #f47c20;
+            background: -webkit-gradient(linear, left top, left bottom, from(#f88e11), to(#f06015));
+            background: -moz-linear-gradient(top,  #f88e11,  #f06015);
+            filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#f88e11', endColorstr='#f06015');
+        }
+        .button:active {
+            position: relative;
+            top: 1px;
+        }
         .leaflet-popup-content {
 			max-height: 500px;
 			overflow-y: auto;
@@ -41,7 +68,7 @@
 	<script src="../external/leaflet.js"></script>
 
 	<script src="../src/kptUtils.js"></script>
-	<script src="../external/Dictionary.js"></script>
+	<script src="../external/mskCad.js"></script>
 	<script src="../external/proj4.js"></script>
 </head>
 <body>
@@ -54,7 +81,6 @@
 				<div id="fileProgress"></div>
 				<div id="kptInfo"></div>
 				<div id="exportCont">
-					<button id="exportButton" disabled>Экспорт в FeatureCollection</button>
 				</div>
 			</div>
 		</div>
@@ -62,7 +88,7 @@
 	<script src="../src/view.js"></script>
 	<script>
 
-		var map = L.map('map').setView([60, 50], 3);
+		var map = L.map('map').setView([60, 80], 3);
 
 		var osm = L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
 			maxZoom: 18,
