--- a/examples/kptView.html
+++ b/examples/kptView.html
@@ -14,7 +14,7 @@
         #info {
             width: 30%;
             position: absolute;
-            right: 20px;
+            right: 120px;
             top: 0px;
             padding: 20px;
 			box-shadow: 0 3px 14px rgba(0,0,0,0.4);
@@ -29,6 +29,9 @@
 		}
 		#kptInfo div div {
             padding-left: 20px;
+		}
+		.pointer {
+            cursor: pointer;
 		}
 		.hidden {
 			display: none;
@@ -96,12 +99,6 @@
 	<script>
 
 		var map = L.map('map').setView([60, 80], 3);
-
-		var osm = L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
-			maxZoom: 18,
-			attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>'
-		}).addTo(map);
-
 		window.viewer.init(map);
 
     </script>
