Тест примера doc4822056.xml

--- a/examples/kptView.html
+++ b/examples/kptView.html
@@ -72,6 +72,9 @@
             padding-left: 20px;
         }
 
+		#cadVersion {
+			font-weight: bold;
+		}
     </style>
 
 	<link rel="stylesheet" href="../external/leaflet.css" />
@@ -85,7 +88,7 @@
 	<div id="infoPanel">
 		<div id="map"></div>
 		<div id="info">
-			<div>Тестирование KPT("Кадастровый план територии") файлов <br>(<a href="https://github.com/OriginalSin/kptView/tree/master/testdata" target="_blank">Скачать примеры файлов</a>)</div>
+			<div>Тестирование KPT("Кадастровый план територии") файлов <br>(<a href="https://github.com/OriginalSin/kptView/tree/master/testdata" target="_blank">Скачать примеры файлов</a>) <span id="cadVersion"></span></div>
 			<input type="file" onChange="window.viewer.selectFile(this);">
 			<div id="resCont">
 				<div id="fileProgress"></div>
@@ -100,7 +103,8 @@
 
 		var map = L.map('map').setView([60, 80], 3);
 		window.viewer.init(map);
-
+		
+        document.getElementById("cadVersion").innerHTML = window.CAD.version;
     </script>
 </body>
 </html>
